package com.sellit.services.domain;

import java.math.BigDecimal;
import java.time.LocalDateTime;
import java.util.UUID;

public class ProductDomain {
    private UUID id;
    
    private String name;

    private BigDecimal price;
    
    private String description;
    
    private Integer quantityInStock;
    
    private LocalDateTime createdAt = LocalDateTime.now();
    
    private LocalDateTime updatedAt = LocalDateTime.now();
    
    private boolean active;
    
    public ProductDomain() {}
    
    public ProductDomain(UUID id, String name, BigDecimal price, String description,
                         Integer quantityInStock, LocalDateTime createdAt,
                         LocalDateTime updatedAt, boolean active) {
        this.id = id;
        this.name = name;
        this.price = price;
        this.description = description;
        this.quantityInStock = quantityInStock;
        this.createdAt = createdAt;
        this.updatedAt = updatedAt;
        this.active = active;
    }
    
    public static ProductBuilder builder() {
        return new ProductBuilder();
    }
    
    public void updateTimestamp() {
        this.updatedAt = LocalDateTime.now();
    }
    
    // Getters and Setters
    public UUID getId() { return id; }
    public void setId(UUID id) { this.id = id; }
    
    public String getName() { return name; }
    public void setName(String name) { this.name = name; }
    
    public BigDecimal getPrice() { return price; }
    public void setPrice(BigDecimal price) { this.price = price; }
    
    public String getDescription() { return description; }
    public void setDescription(String description) { this.description = description; }
    
    public Integer getQuantityInStock() { return quantityInStock; }
    public void setQuantityInStock(Integer quantityInStock) { this.quantityInStock = quantityInStock; }
    
    public LocalDateTime getCreatedAt() { return createdAt; }
    public void setCreatedAt(LocalDateTime createdAt) { this.createdAt = createdAt; }
    
    public LocalDateTime getUpdatedAt() { return updatedAt; }
    public void setUpdatedAt(LocalDateTime updatedAt) { this.updatedAt = updatedAt; }
    
    public boolean isActive() { return active; }
    public void setActive(boolean active) { this.active = active; }
    
    public static class ProductBuilder {
        private UUID id;
        private String name;
        private BigDecimal price;
        private String description;
        private Integer quantityInStock;
        private LocalDateTime createdAt = LocalDateTime.now();
        private LocalDateTime updatedAt = LocalDateTime.now();
        private boolean active;
        
        public ProductBuilder id(UUID id) { this.id = id; return this; }
        public ProductBuilder name(String name) { this.name = name; return this; }
        public ProductBuilder price(BigDecimal price) { this.price = price; return this; }
        public ProductBuilder description(String description) { this.description = description; return this; }
        public ProductBuilder quantityInStock(Integer quantityInStock) { this.quantityInStock = quantityInStock; return this; }
        public ProductBuilder createdAt(LocalDateTime createdAt) { this.createdAt = createdAt; return this; }
        public ProductBuilder updatedAt(LocalDateTime updatedAt) { this.updatedAt = updatedAt; return this; }
        public ProductBuilder active(boolean active) { this.active = active; return this; }
        
        public ProductDomain build() {
            return new ProductDomain(id, name, price, description, quantityInStock, createdAt, updatedAt, active);
        }
    }
}
