' Generated by UML Generator
' Encoded: xLZBZjis5DtxAmXq8pUoqRMH3kA91ws0JZgDCzqKNT0Iuo52aHgASZFDuzlBboG-nDYJf6YBUcTUtlSzFAJrh1MGYwuci_ODfWtai0ObWMsx5eBZNITGKJAwnNyYyDti3bS8b9YN1CrcMWlyGDWEagkt9Me4PlH7I2k2E7Wt0-39dLxy2WckeDeSjDeClLs1QoJkMBNc-wv6LBnWGciEIlCLU8dQHcgZAogmU7XwnJdZlUnYZ13ae9sVxkP3NuedrnKiQjIsS8zMO2kRGVTA9FibkdO5C1LgAR3K4R1kLk0dLaAoWGAzaZArXvH3gNeDcwV6GMuTgUGN2rM15pIRnw8WXHmu2UGW5Ju74y5jR1raZyIryPpDdVAUjACyY2pL3WnNrdYhir2sfX7AqCgS17sRLtsooYpibd8mAgJgyXtgJkaauYgjIwloYMvOZmCCjeWGBDPDGt2fOMl0_4wLXSiFe8QOPf3lsxunl_qU-RZXhEfAyHBTTx8CWoKAQmz83SUb55pY_GQLk8P42IlKbXnhuBgwzntKs2teLh3opGeKLA0zuWEC_806Hu7CZP-3A7eE9cBd81Mv1z4BwJL2a1QwyVontQZOoiYhNHcQdIWtttmpvXb5TlScwl4T_UBNffoDVLNUGeLaCnBpVyweu8pqX2X7hiLRn0-wmXjl7GvpjCu-RQXdKN8apuZTw0tix5S186DE7FOTSjMJqkBBXwBASBK2jxV5vcJZDI5sHn_HGY0ETmJrwiRuOkBGk0pSH_qxJv1fNRKM4npUDLLo3vO27sG2EyO8WZHnOVZdqoNwK1WIxfHEtuySVDtpd8DK5tAGwa4EWWxqf23HCX_6fWwI3n_d29xfmw4Fu_PvFuVKBJagf4RcExpjnvToE2ga9kqunErQ3rqv6u6lt5XvY0albyzySmmSyNE3wBh1aXfVuxsvc5jzN-kDcq8vjZyZOZ64yv-a5PT3J1dP-QoTprhwh7t3g4azysGcUfP-hpQinOBnXw9kl2VBkBEAbUDRpd6JdU91Wxc5v02vtXEiDzimzTuUJCno7gmV_U2GVqqGVmrB5ASYomxROeByyyG1llVNIyh-q3oGf9EqnH6ICILxpnGh-lS_G8P_QhiEaqg-daUuN1g9qZ8-lR-apZa-i-gPLKDM3Md1Wkd_mGlOmtzydEW4ucEj9WdlMBSwYkJOvlvqlCR6vIceJ1794Up5PZ25jLXLyrWMNNeX7ktNWEIzNHozkAs7x2HZUsSVqB6hUkIdpxoZYwbB6e2FN_HW-FYePE8FEjyk5k7tcrXfkRm8FhtC9fzQo-NxYwdvJ2exaO-fEl5juVwJnjdlyHQGswCq_1Wz7bM-wTfwhTZDnDXZfMU8LbrD_W8
' URL: http://www.plantuml.com/plantuml/uml/xLZBZjis5DtxAmXq8pUoqRMH3kA91ws0JZgDCzqKNT0Iuo52aHgASZFDuzlBboG-nDYJf6YBUcTUtlSzFAJrh1MGYwuci_ODfWtai0ObWMsx5eBZNITGKJAwnNyYyDti3bS8b9YN1CrcMWlyGDWEagkt9Me4PlH7I2k2E7Wt0-39dLxy2WckeDeSjDeClLs1QoJkMBNc-wv6LBnWGciEIlCLU8dQHcgZAogmU7XwnJdZlUnYZ13ae9sVxkP3NuedrnKiQjIsS8zMO2kRGVTA9FibkdO5C1LgAR3K4R1kLk0dLaAoWGAzaZArXvH3gNeDcwV6GMuTgUGN2rM15pIRnw8WXHmu2UGW5Ju74y5jR1raZyIryPpDdVAUjACyY2pL3WnNrdYhir2sfX7AqCgS17sRLtsooYpibd8mAgJgyXtgJkaauYgjIwloYMvOZmCCjeWGBDPDGt2fOMl0_4wLXSiFe8QOPf3lsxunl_qU-RZXhEfAyHBTTx8CWoKAQmz83SUb55pY_GQLk8P42IlKbXnhuBgwzntKs2teLh3opGeKLA0zuWEC_806Hu7CZP-3A7eE9cBd81Mv1z4BwJL2a1QwyVontQZOoiYhNHcQdIWtttmpvXb5TlScwl4T_UBNffoDVLNUGeLaCnBpVyweu8pqX2X7hiLRn0-wmXjl7GvpjCu-RQXdKN8apuZTw0tix5S186DE7FOTSjMJqkBBXwBASBK2jxV5vcJZDI5sHn_HGY0ETmJrwiRuOkBGk0pSH_qxJv1fNRKM4npUDLLo3vO27sG2EyO8WZHnOVZdqoNwK1WIxfHEtuySVDtpd8DK5tAGwa4EWWxqf23HCX_6fWwI3n_d29xfmw4Fu_PvFuVKBJagf4RcExpjnvToE2ga9kqunErQ3rqv6u6lt5XvY0albyzySmmSyNE3wBh1aXfVuxsvc5jzN-kDcq8vjZyZOZ64yv-a5PT3J1dP-QoTprhwh7t3g4azysGcUfP-hpQinOBnXw9kl2VBkBEAbUDRpd6JdU91Wxc5v02vtXEiDzimzTuUJCno7gmV_U2GVqqGVmrB5ASYomxROeByyyG1llVNIyh-q3oGf9EqnH6ICILxpnGh-lS_G8P_QhiEaqg-daUuN1g9qZ8-lR-apZa-i-gPLKDM3Md1Wkd_mGlOmtzydEW4ucEj9WdlMBSwYkJOvlvqlCR6vIceJ1794Up5PZ25jLXLyrWMNNeX7ktNWEIzNHozkAs7x2HZUsSVqB6hUkIdpxoZYwbB6e2FN_HW-FYePE8FEjyk5k7tcrXfkRm8FhtC9fzQo-NxYwdvJ2exaO-fEl5juVwJnjdlyHQGswCq_1Wz7bM-wTfwhTZDnDXZfMU8LbrD_W8
' Generated on: 2025-12-11T20:56:56.444750003

@startuml
skinparam classAttributeIconSize 0
hide circle

class GlobalExceptionHandler {
  +handleValidationExceptions(ex: MethodArgumentNotValidException): ResponseEntity<ErrorResponse>
  +handleGlobalException(ex: Exception): ResponseEntity<ErrorResponse>
}

class ErrorResponse {
  -message: String
  -status: int
  -timestamp: LocalDateTime
  -errors: Map<String, String>
  --
  +ErrorResponse()
  +ErrorResponse(message: String, status: int, timestamp: LocalDateTime, errors: Map<String,String>)
  +getMessage(): String
  +setMessage(message: String): void
  +getStatus(): int
  +setStatus(status: int): void
  +getTimestamp(): LocalDateTime
  +setTimestamp(timestamp: LocalDateTime): void
  +getErrors(): Map<String,String>
  +setErrors(errors: Map<String,String>): void
}

class SellitApplication {
  +{static} main(args: String[]): void
}

class ProductRequest {
  -name: String
  -price: BigDecimal
  -description: String
  -quantityInStock: Integer
  --
  +ProductRequest()
  +ProductRequest(name: String, price: BigDecimal, description: String, quantityInStock: Integer)
  +getName(): String
  +setName(name: String): void
  +getPrice(): BigDecimal
  +setPrice(price: BigDecimal): void
  +getDescription(): String
  +setDescription(description: String): void
  +getQuantityInStock(): Integer
  +setQuantityInStock(quantityInStock: Integer): void
}

class ProductController {
  -productService: ProductService
  --
  +ProductController(productService: ProductService)
  +createProduct(productRequest: ProductRequest): ResponseEntity<ProductResponse>
  +getProductById(id: UUID): ResponseEntity<ProductResponse>
  +getAllProducts(): Iterable<ProductEntity>
}

class ProductResponse {
  -id: UUID
  -name: String
  -price: BigDecimal
  -description: String
  -quantityInStock: Integer
  -createdAt: LocalDateTime
  -updatedAt: LocalDateTime
  -active: boolean
  -message: String
  --
  +ProductResponse()
  +ProductResponse(message: String)
  +ProductResponse(id: UUID, name: String, price: BigDecimal, description: String, quantityInStock: Integer, createdAt: LocalDateTime, updatedAt: LocalDateTime, active: boolean)
  +getId(): UUID
  +setId(id: UUID): void
  +getName(): String
  +setName(name: String): void
  +getPrice(): BigDecimal
  +setPrice(price: BigDecimal): void
  +getDescription(): String
  +setDescription(description: String): void
  +getQuantityInStock(): Integer
  +setQuantityInStock(quantityInStock: Integer): void
  +getCreatedAt(): LocalDateTime
  +setCreatedAt(createdAt: LocalDateTime): void
  +getUpdatedAt(): LocalDateTime
  +setUpdatedAt(updatedAt: LocalDateTime): void
  +isActive(): boolean
  +setActive(active: boolean): void
  +getMessage(): String
  +setMessage(message: String): void
}

class OpenApiConfig {
  +sellitOpenAPI(): OpenAPI
}

class ProductEntity {
  -id: UUID
  -name: String
  -price: BigDecimal
  -description: String
  -quantityInStock: Integer
  -createdAt: LocalDateTime
  -updatedAt: LocalDateTime
  -active: boolean
  --
  +ProductEntity()
  +getId(): UUID
  +setId(id: UUID): void
  +getName(): String
  +setName(name: String): void
  +getPrice(): BigDecimal
  +setPrice(price: BigDecimal): void
  +getDescription(): String
  +setDescription(description: String): void
  +getQuantityInStock(): Integer
  +setQuantityInStock(quantityInStock: Integer): void
  +getCreatedAt(): LocalDateTime
  +setCreatedAt(createdAt: LocalDateTime): void
  +getUpdatedAt(): LocalDateTime
  +setUpdatedAt(updatedAt: LocalDateTime): void
  +isActive(): boolean
  +setActive(active: boolean): void
  #onCreate(): void
  #onUpdate(): void
}

class ProductRepositoryImp {
  -productRepository: ProductRepository
  --
  +ProductRepositoryImp(productRepository: ProductRepository)
  +salvarProduto(productDomain: ProductDomain): ProductDomain
  +getAllProducts(): Iterable<ProductEntity>
}

interface ProductRepository {
}

class ProductDomain {
  -id: UUID
  -name: String
  -price: BigDecimal
  -description: String
  -quantityInStock: Integer
  -createdAt: LocalDateTime = LocalDateTime.now()
  -updatedAt: LocalDateTime = LocalDateTime.now()
  -active: boolean
  --
  +ProductDomain()
  +ProductDomain(id: UUID, name: String, price: BigDecimal, description: String, quantityInStock: Integer, createdAt: LocalDateTime, updatedAt: LocalDateTime, active: boolean)
  +{static} builder(): ProductBuilder
  +updateTimestamp(): void
  +getId(): UUID
  +setId(id: UUID): void
  +getName(): String
  +setName(name: String): void
  +getPrice(): BigDecimal
  +setPrice(price: BigDecimal): void
  +getDescription(): String
  +setDescription(description: String): void
  +getQuantityInStock(): Integer
  +setQuantityInStock(quantityInStock: Integer): void
  +getCreatedAt(): LocalDateTime
  +setCreatedAt(createdAt: LocalDateTime): void
  +getUpdatedAt(): LocalDateTime
  +setUpdatedAt(updatedAt: LocalDateTime): void
  +isActive(): boolean
  +setActive(active: boolean): void
}

class ProductBuilder {
  -id: UUID
  -name: String
  -price: BigDecimal
  -description: String
  -quantityInStock: Integer
  -createdAt: LocalDateTime = LocalDateTime.now()
  -updatedAt: LocalDateTime = LocalDateTime.now()
  -active: boolean
  --
  +id(id: UUID): ProductBuilder
  +name(name: String): ProductBuilder
  +price(price: BigDecimal): ProductBuilder
  +description(description: String): ProductBuilder
  +quantityInStock(quantityInStock: Integer): ProductBuilder
  +createdAt(createdAt: LocalDateTime): ProductBuilder
  +updatedAt(updatedAt: LocalDateTime): ProductBuilder
  +active(active: boolean): ProductBuilder
  +build(): ProductDomain
}

class ProductService {
  -productRepository: IProductRepository
  --
  +ProductService(productRepository: IProductRepository)
  +save(productDomain: ProductDomain): String
  +getAllProducts(): Iterable<ProductEntity>
}

interface IProductRepository {
  ~salvarProduto(productDomain: ProductDomain): ProductDomain
  ~getAllProducts(): Iterable<ProductEntity>
}

ProductController *-- ProductService
ProductController ..> ProductRequest
ProductRepositoryImp ..|> IProductRepository
ProductRepositoryImp *-- ProductRepository
ProductRepositoryImp ..> ProductDomain
ProductDomain ..> ProductBuilder
ProductBuilder ..> ProductBuilder
ProductBuilder ..> ProductDomain
ProductService *-- IProductRepository
ProductService ..> ProductDomain
IProductRepository ..> ProductDomain
@enduml